2022-09-02T08:22:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977639866
* notice: last 14d: unq all: 9 20
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-01T08:24:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970054425
* notice: last 14d: unq all: 8 19
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-18] / []

2022-09-01T01:48:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968310770
* notice: last 14d: unq all: 8 21
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T16:25:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965455858
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 90 133
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-30T02:06:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2953049020
* notice: last 14d: unq all: 7 16