@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-27T01:53:05Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2022-09-09T16:26:14Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 6 ],
+  "count_decinc" : [ -4, +6 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 5 ],
+  "uniques_decinc" : [ -3, +5 ]
 }
