@@ -1,11 +1,11 @@
 {
-  "count": 20,
-  "uniques": 9,
+  "count": 16,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
