@@ -1,3 +1,11 @@
+2022-09-09T16:26:14Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023889543
+* notice: last 14d: unq all: 6 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
+* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +5 +6 -3 -4 / 2 2
+* notice: removed / changed dates: [] / [2022-08-26]
+
 2022-09-02T08:22:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977639866
 * notice: last 14d: unq all: 9 20
